firebase hosting enabled, still need powerup function

--- a/RS.html
+++ b/RS.html
@@ -10,6 +10,7 @@
     }
   </style>
   <script src="//cdn.jsdelivr.net/npm/phaser@3.55.2/dist/phaser.js"></script>
+  <script src="./rsAPI.js"></script>
 </head>
 
 <body>
